# csv2xlsx

./: .gitignore  pyproject.toml
csv2xlsx/: __init__.py  csv2xlsx.py  xlsx2csv.py
