[tool.poetry]
name = "csv2xlsx"
version = "0.1.0"
description = "Convert csv files to xlsx"
authors = ["George Murga <george.murga+github@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
XlsxWriter = "^3.2.0"
chardet = "^5.2.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.12.0"
ruff = "^0.6.9"
pynsist = "^2.8"
types-openpyxl = "^3.1.5.20240918"

[tool.poetry.scripts]
csv2xlsx = "csv2xlsx.csv2xlsx:main"
xlsx2csv = "csv2xlsx.xlsx2csv:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["xlsxwriter"]
ignore_missing_imports = true
